[Java] Fixed findbugs reports for joynr-generator-maven-plugin
Change-Id: I78390a74cc76a56e4fac5ec82bb05d85f95d1ea3